Revert "fixing a few layout issues"
This reverts commit c4c0b8a5bae91175ba0f4aba70e2866103d85f99.

--- a/src/styles/layouts/_global.scss
+++ b/src/styles/layouts/_global.scss
@@ -9,8 +9,7 @@ main > article {
   @extend .row;
   background-color: $body-bg;
   padding: 0;
-  padding-bottom: 2em;
-  margin: 0 auto;
+  margin: 34em auto 0 auto;
   clear: both;
   float: none;
 
